src/App.css
.terminal-container {
  width: 100%;
  height: 100vh;
  overflow: auto;
  cursor: text;
  background: #000;
  background-size: cover;
}

.terminal-content {
  padding: 20px;
  font-size: 15px;
  line-height: 20px;
  white-space: pre-wrap;
  color: #aaa;
  font-family: monospace;
  display: flex;
  flex-direction: column;
}

.terminal-banner {
  color: teal;
  text-shadow: 0 0 5px teal;
  line-height: normal;
  font-weight: bold;
  font-size: min(2.7vw, 18px);
  margin-bottom: 20px;
}

.terminal-welcome-message {
  margin-bottom: 20px;
}

.terminal-command-output {
  padding: 10px;
  max-width: 800px;
}

.terminal-command-output dt {
  color: #eeeeee;
  text-shadow: 0 0 4px #eeeeee;
}

.terminal-command-output dd {
  margin-inline-start: 20px;
}

.terminal-command-output dd:not(:last-child) {
  margin-block-end: 0.3em;
}

.terminal-command-output dd::before {
  content: "- ";
}

.terminal-command-output ul {
  margin-top: 0;
}

.terminal-input-area {
  display: inline-flex;
  width: 100%;
  align-items: center;
}

.terminal-prompt {
  margin-right: 5px;
}

.terminal-input {
  font-family: inherit;
  font-size: inherit;
  font-size: inherit;
  color: rgb(240, 191, 129);
  background: transparent;
  border: 0px;
  outline: none; /* no highlight on focus */
  width: 100%;
}

.terminal-error-group {
  display: flex;
  flex-direction: column;
}

.terminal-error {
  color: red;
}

.terminal-glow {
  color: #eeeeee;
  text-shadow: 0 0 4px #eeeeee;
}

a {
  color: purple;
}
a:hover {
  color: black;
  background-color: purple;
  text-decoration: none;
}

